--- a/index.ipynb
+++ b/index.ipynb
@@ -674,9 +674,9 @@
     "print(\"3.\", True and 2) #True\n",
     "print(\"4.\", 2 and 3) #True\n",
     "print(\"5.\", 2 or []) #True\n",
-    "print(\"6.\", 0 or []) #\n",
-    "print(\"7.\", not False) #\n",
-    "print(\"8.\", not True) #\n",
+    "print(\"6.\", 0 or []) #False\n",
+    "print(\"7.\", not False) #True\n",
+    "print(\"8.\", not True) #False\n",
     "print(\"9.\", not []) #\n",
     "print(\"10.\", not 0) #\n",
     "print(\"11.\", not 100) #"
