Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -727,9 +727,9 @@
     "x = {'name': \"example\"}\n",
     "b = x\n",
     "c = {'name': \"example\"}\n",
-    "print(\"1.\", {} is {}) #\n",
-    "print(\"1A.\", {} == {}) #\n",
-    "print(\"2.\", [] is []) #\n",
+    "print(\"1.\", {} is {}) #True\n",
+    "print(\"1A.\", {} == {}) #True\n",
+    "print(\"2.\", [] is []) #Tru\n",
     "print(\"3.\", \"Hi\" is \"Hi\") #\n",
     "print(\"4.\", [\"same\"] is [\"same\"]) #\n",
     "print(\"4A.\", [\"same\"] == [\"same\"]) #\n",
