--- a/index.ipynb
+++ b/index.ipynb
@@ -720,17 +720,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. False\n",
+      "1A. True\n",
+      "2. False\n",
+      "3. True\n",
+      "4. False\n",
+      "4A. True\n",
+      "5. True\n",
+      "6. True\n",
+      "7. False\n",
+      "7A. True\n",
+      "8. True\n"
+     ]
+    }
+   ],
    "source": [
     "x = {'name': \"example\"}\n",
     "b = x\n",
     "c = {'name': \"example\"}\n",
     "print(\"1.\", {} is {}) #True\n",
     "print(\"1A.\", {} == {}) #True\n",
-    "print(\"2.\", [] is []) #Tru\n",
-    "print(\"3.\", \"Hi\" is \"Hi\") #\n",
+    "print(\"2.\", [] is []) #True\n",
+    "print(\"3.\", \"Hi\" is \"Hi\") #True\n",
     "print(\"4.\", [\"same\"] is [\"same\"]) #\n",
     "print(\"4A.\", [\"same\"] == [\"same\"]) #\n",
     "print(\"5.\", 9 is not 10) #\n",
